--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -2,3 +2,10 @@
 	margin: 0px; 
 	padding: 0px;
 }
+
+.default{
+		font-size: 14px;
+		color: gray;
+		line-height: 150px;
+		text-align: center;
+	}
