--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -20,7 +20,7 @@
 		</mat-button-toggle>
 	</mat-button-toggle-group>
 
-	<mat-button-toggle class="viewer-toggle-btn" matTooltip="Lock" (click)="lock()">
+	<mat-button-toggle class="viewer-toggle-btn" matTooltip="Lock" (click)="lock()" style="position: absolute;right: 0px; top:0px;">
 		<mat-icon>lock</mat-icon>
 	</mat-button-toggle>
 
