--- a/src/styles.scss
+++ b/src/styles.scss
@@ -212,3 +212,12 @@ split-area{
 		height: 24px !important;
 	}
 }*/
+
+
+
+// dummy placeholder when node is being dragged in angular-tree
+.is-dragging-over{
+	height: 2px !important; 
+	border: 1px solid #9E9E9E !important; 
+	background-color: #9E9E9E !important;
+}
