help docs iframe added

--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -1,5 +1,5 @@
 <div class="viewer-container">             
-	<mat-button-toggle-group class="viewer-toggle" [(ngModel)]="group.value">
+	<mat-button-toggle-group class="viewer-toggle" [(ngModel)]="group.value" (change)="changed()">
 		<mat-button-toggle value="0" class="viewer-toggle-btn" matTooltip="3D Viewer">
 		  <mat-icon>3d_rotation</mat-icon>
 		</mat-button-toggle>
@@ -20,10 +20,12 @@
 		</mat-button-toggle>
 	</mat-button-toggle-group>
 
-	<mat-button-toggle class="viewer-toggle-btn" matTooltip="Lock" (click)="lock()" style="position: absolute;right: 0px; top:0px;">
+	<!-- <button class="viewer-toggle-btn" 
+		matTooltip="Locked: {{this._lock}}" (click)="lock()" 
+		style="position: absolute;right: 0px; top:0px;">
 		<mat-icon>lock</mat-icon>
-	</mat-button-toggle>
-
+	</button>
+ -->
 	<app-geometry-viewer *ngIf="group.value == 0"></app-geometry-viewer>
 	<app-code-viewer *ngIf="group.value == 1"></app-code-viewer>
 	<app-text-viewer *ngIf="group.value == 2"></app-text-viewer>
