--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -95,7 +95,7 @@
 										</div>
 									</div>
 
-									<div class = "divider" style="width:5%;">
+									<div class = "divider">
 									</div>
 
 									<div class = "seg2" *ngIf="prod.data.name != 'Else' && prod.data.name != 'If'">
