--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -21,44 +21,42 @@
 						</mat-panel-description>
 					</mat-expansion-panel-header>
 
-					<span (click)="addPort(node_index, 'in')">Add Input</span>
+					<span class="addBtn" (click)="addPort(node_index, 'in')">Add Input</span>
 
-					<div class='port input' *ngFor="let inp of _inputs; let i=index">
-						
-						<div class="content">
-							<div class='row'>
-								<span class='label'>Name</span>
-								<span class='content' contenteditable="true" (blur)="updatePortName($event, inp)">
-									{{ inp.getName() || "undefined" }}
-								</span>
-							</div>
-
-							<div class='row'>
-								<span class='label'>Type</span>
-								<span class='content'>
-									<select (change)="updateType($event.target.value, inp)">
-										         	    <option *ngFor="let x of inputPortOpts" [value]="x" [selected]="inp.getType() == x">{{getInputTypeName(x)}}</option>
-										            </select>
-								</span>
-							</div>
-
-							<div class='row'>
-								<span class='label'>Default</span>
-								<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, inp)">
-									{{inp.getDefaultValue() || "undefined"}}
-								</span>
-							</div>
-
+					<div class='port input' *ngFor="let inp of _inputs; let i=index"><div class="content">
+						<div class='row'>
+							<!--<span class='label'>Name</span>-->
+							<span class='content' contenteditable="true" (blur)="updatePortName($event, inp)">
+								{{ inp.getName() || "undefined" }}
+							</span>
 						</div>
-						
+
+						<div class='row'>
+							<!--<span class='label'>Type</span>-->
+							<span class='content'>
+								<select (change)="updateType($event.target.value, inp)">
+									         	    <option *ngFor="let x of inputPortOpts" [value]="x" [selected]="inp.getType() == x">{{getInputTypeName(x)}}</option>
+									            </select>
+							</span>
+						</div>
+
+						<div class='row'>
+							<!--<span class='label'>Default</span>-->
+							<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, inp)">
+								{{inp.getDefaultValue() || "undefined"}}
+							</span>
+						</div>	
+						</div>			
 						<div class="controls">
-							<span class='btn btn-small' (click)='deletePort($event, "input", i)'>Delete</span>
+					        <button mat-button (click)='deletePort($event, "input", i)'>
+					    		<mat-icon>delete</mat-icon>
+    					    </button>
 						</div>
 					</div>
 				</mat-expansion-panel>
 
 				<!-- outputs -->
-				<mat-expansion-panel  [disabled]="_outputs.length == 0" [expanded]="true">
+				<mat-expansion-panel [disabled]="_outputs.length == 0" [expanded]="true">
 					<mat-expansion-panel-header>
 						<mat-panel-title>
 						  Outputs 
@@ -68,33 +66,34 @@
 						</mat-panel-description>
 					</mat-expansion-panel-header>
 
-					<span (click)="addPort(node_index, 'out')">Add Output</span>
+					<span class ="addBtn" (click)="addPort(node_index, 'out')">Add Output</span>
 
-					<div class='port output' *ngFor="let output of _outputs; let o=index">
-						<div class="content">
-							<div class='row'>
-								<span class='label'>Name</span>
-								<span class='content' contenteditable="true" (blur)="updatePortName($event, output)">
-									{{ output.getName() || "undefined" }}
-								</span>
-							</div>
-							<div class='row'>
-								<span class='label'>Type</span>
-								<span class='content'>
-									<select (change)="updateType($event.target.value, output)">
-						         	    <option *ngFor="let x of outputPortOpts" [value]="x" [selected]="output.getType() == x">{{getOutputTypeName(x)}}</option>
-						            </select>
-								</span>
-							</div>
-							<!-- <div class='row'>
-								<span class='label'>Default</span>
-								<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, output)">
-									{{ output.getDefaultValue() || "undefined"}}
-								</span>
-							</div> -->
+					<div class='port output' *ngFor="let output of _outputs; let o=index"><div class="content">
+						<div class='row'>
+							<!--<span class='label'>Name</span>-->
+							<span class='content' contenteditable="true" (blur)="updatePortName($event, output)">
+								{{ output.getName() || "undefined" }}
+							</span>
+						</div>
+						<div class='row'>
+							<!--<span class='label'>Type</span>-->
+							<span class='content'>
+								<select (change)="updateType($event.target.value, output)">
+					         	    <option *ngFor="let x of outputPortOpts" [value]="x" [selected]="output.getType() == x">{{getOutputTypeName(x)}}</option>
+					            </select>
+							</span>
+						</div>
+						<div class='row hidden'>
+							<!--<span class='label'>Default</span>-->
+							<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, output)">
+								{{ output.getDefaultValue() || "undefined"}}
+							</span>
+						</div>
 						</div>
 						<div class="controls">
-							<span class='btn btn-small' (click)='deletePort($event, "output", o)'>Delete</span>
+					        <button mat-button (click)='deletePort($event, "output", o)'>
+					    		<mat-icon>delete</mat-icon>
+    					    </button>
 						</div>
 					</div>
 				</mat-expansion-panel>
