--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,6 @@ body{
 
 	padding: 0px;
 	margin: 0px; 
-
 }
 
 .hidden{
@@ -65,10 +64,10 @@ split-area{
 
 .mat-expansion-panel-header{
 	height: 30px !important;
-	//padding: 0px $default-side-padding !important;
 	background-color: white !important;
 	border-top: 1px solid $color2 !important;
 	border-bottom: 1px solid $color2 !important;
+	padding-left: $default-side-padding !important;
 	.mat-expansion-panel-header-title{
 		color: $color1 !important;
 		font-weight: bold !important;
@@ -82,6 +81,9 @@ split-area{
 		height: 100%;
 		overflow: auto !important;
 		color: $color1;
+		padding: 0 !important;
+		box-sizing: border-box !important;
+		padding-bottom: $default-side-padding!important;
 	span{
 		color: $color1;
 		&:hover{
@@ -131,71 +133,122 @@ split-area{
 	display: inline-block;
 }
 
+
+
+
 .angular-tree-component{
 	.node-content-wrapper{
 		width:100% !important;
+		border-bottom: 1px dashed $color1;
+		&:hover{
+			background-color: rgba(240,191,160,0.3) !important;
+			.seg1{
+				width: 80% !important;
+				display: flex !important;
+				flex-flow: row wrap !important;
+			}
+		}
 		.full-container{
 			width: 100% !important;
 			padding: 0px !important;
+
 			border-radius: 0px;
 			transition: none;
-			margin:0 !important;
+
 
 			display: flex;
-			flex-flow: row wrap!important;
+			flex-flow: row nowrap!important;
 			overflow: hidden !important;
 			justify-content: space-between !important;
 
-			border-bottom: 1px dashed $color1;
-		}
-		.seg1{
-			width: 80% !important;
-			flex-direction: row !important;
-			justify-content: space-between !important;
-			flex-grow:1 !important;
-			flex-shrink:0 !important;
-		}
-		.procedure-item{
-			color: $color1 !important;
-			.tree-input{
-				width: 100px !important;
-				background-color: $color3;
-				border-radius: 3px;
-				text-align: center;
-				margin: 2px 0px;
-				&:focus{
-					background-color:$color4 !important;
-					&:hover{
-						color:$color1 !important;
-					}
-				}
-				&:hover{
-					color: $color4 !important;
-				}
-			}
-		}
-		.seg2{
-				width: 20% !important;
-				display: flex;
-				justify-content: flex-end !important;
+//			overflow-x: auto!important;
+//			box-sizing: border-box!important;
+			.seg1{
+				min-width: 80% !important; //change to min-width for single line
+				display: flex !important;
+				flex-flow: row nowrap!important; //nowrap
+				justify-content: space-between !important;
 				flex-grow:1 !important;
 				flex-shrink:0 !important;
-			button{
+			}
+			.procedure-item{
+				color: $color1 !important;
+				display: flex !important;
+				flex-flow: row wrap !important;
+				.tree-input{
+					width: 100px !important;
+
+					background-color: white;//$color3;
+					border-bottom: 1px solid $color1;
+
+					border-radius: 3px;
+					text-align: center; //center;
 					margin: 2px 0px;
-					height: 20px;
-				mat-icon{
-					height: 20px;
-					vertical-align: top !important;
-					font-size: 20px !important;
+					&:focus{
+						background-color:$color4 !important;
+						&:hover{
+							color:$color1 !important;
+						}
+					}
+					&:hover{
+						color: $color4 !important;
+					}
 				}
-				&:hover{
-					background-color: $color3 !important;
+			}
+
+			.seg2{
+				display: flex !important;
+				justify-content: flex-end !important;
+
+				flex-grow:1 !important;
+				flex-shrink:0 !important;
+				button{
+						margin: 2px 0px;
+						max-width: 40px !important;
+						height: 20px;
+						min-width: 20px !important;
+						padding: 0px !important; 
+
+						flex-grow:0 !important;
+						flex-shrink:0 !important;
+								
 					mat-icon{
-						color: $color5 !important;
+						height: 20px;
+						vertical-align: top !important;
+						font-size: 20px !important;
+					}
+					&:hover{
+						background-color: $color3 !important;
+						mat-icon{
+							color: $color5 !important;
+						}
 					}
 				}
 			}
 		}
+	}
+	/*.node-content-wrapper-focused{
+		background-color: $color3 !important;
+		&:hover{
+			background-color: $color3 !important;		
+		}
+
+		.full-container.seg1{
+			display: flex !important;
+			flex-flow: row wrap !important;
+		}
+	}*/
+}
+
+.node-content-wrapper.node-content-wrapper-active.node-content-wrapper-focused{
+	background-color: $color3 !important;
+	&:hover{
+		background-color: $color3 !important;		
+	}
+	.seg1{
+		width: 80% !important;
+		display: flex !important;
+		flex-flow: row wrap !important;
 	}
 }
 
@@ -224,4 +277,12 @@ split-area{
 	height: 2px !important; 
 	border: 1px solid #9E9E9E !important; 
 	background-color: #9E9E9E !important;
+}
+
+tree-viewport{
+	overflow:hidden !important;
+}
+
+span.addBtn{
+	padding-left: $default-side-padding !important;
 }
