procedure editor and viewer

--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.html
@@ -1,4 +1,6 @@
 <div class="viewer">
 	<h1> Welcome to Mobius! </h1>
-	<iframe [src]="_url" frameborder="0"></iframe>
+	<div class="iframe-container">
+		<iframe [src]="_url" frameborder="0"></iframe>
+	</div>
 </div>
