--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
@@ -2,13 +2,31 @@
 
 .viewer{
 	@extend .viewer;
+	display: flex !important;
+	flex-flow: column nowrap !important;
 
-	padding: 30px 90px 30px 30px;  
+	height: 100% !important;
+	padding-top: $default-side-padding;
 
-	iframe{
-		height: 100%; 
-		width: 100%;
-		min-height: 600px;
+	h1{
+		padding-left: $default-side-padding;
+		padding-bottom: 5px;
+		color: $color1;
+		display: block;
+		border-bottom: 1px solid $color3;
+		flex-grow: 0 !important;
+		flex-shrink: 1 !important;
 	}
 
+	.iframe-container{
+		height: 100%;
+		width: 100%;
+
+		flex-shrink: 1 !important;
+		flex-grow: 0 !important;
+		iframe{
+			height: 100%; 
+			width: 100%;
+		}
+	}
 }
