--- a/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
+++ b/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
@@ -1,21 +1,22 @@
-<div class="viewer">
-	<div class="container" *ngIf="_selectedNode !== undefined">
-		{{_selectedNode.getName()}}
-		<ul>
-			<li  *ngFor="let output of _selectedNode.getOutputs()">
-				{{ output.getValue() }}
-			</li>
-		</ul>
-
+<div class="container" *ngIf="_selectedNode !== undefined">
+	<div class = "nameLabel">
+		<span>Node Name: </span>{{_selectedNode.getName()}}
 	</div>
+	
+	<ul>
+		<li  *ngFor="let output of _selectedNode.getOutputs()">
+			{{ output.getValue() }}
+		</li>
+	</ul>
 
-	<div>
-		Selected Port: 
-		<br>
-		{{ getPortContent() }}
-	</div>
+</div>
 
-	<div class="default" *ngIf="_selectedNode === undefined">
-		No Node Selected
-	</div>
+<div>
+	Selected Port: 
+	<br>
+	{{ getPortContent() }}
+</div>
+
+<div class="default" *ngIf="_selectedNode === undefined">
+	No Node Selected
 </div>
