--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,3 +1,5 @@
+@import '~scss/variables';
+
 .reset{
 	margin: 0px; 
 	padding: 0px;
@@ -5,7 +7,7 @@
 
 .default{
 		font-size: 14px;
-		color: gray;
+		color: $color2;
 		line-height: 150px;
 		text-align: center;
 	}
