procedure editor and viewer

--- a/src/app/ui-components/editors/editor/editor.component.scss
+++ b/src/app/ui-components/editors/editor/editor.component.scss
@@ -12,6 +12,8 @@
 
 	height: 100%;
 	width: 100%;
+	padding-bottom: $header-height;
+	box-sizing: border-box;
 	//overflow: hidden;
 
 	/*.node-header{
