--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -199,7 +199,7 @@ split-area{
 								cursor: pointer;
 
 								&.selected{
-									border: 2px solid black;
+									border: 2px solid $color5;
 								}
 
 								&:hover{
