--- a/src/app/ui-components/controls/modulebox/modulebox.component.scss
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.scss
@@ -7,7 +7,7 @@
 	background-color: $color3;
 	position: relative;
 	box-sizing: border-box;
-	padding-bottom: $header-height;
+	//padding-bottom: $header-height;
 	.toolbox-content{
 		height:	100%;
 		overflow-y: auto;
