--- a/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
+++ b/src/app/ui-components/viewers/help-viewer/help-viewer.component.scss
@@ -7,6 +7,8 @@
 
 	height: 100% !important;
 	padding-top: $default-side-padding;
+	box-sizing: border-box !important;
+	padding-bottom: 2*$header-height;
 
 	h1{
 		padding-left: $default-side-padding;
