--- a/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
+++ b/src/app/ui-components/viewers/text-viewer/text-viewer.component.html
@@ -1,20 +1,22 @@
 <div class="container" *ngIf="_selectedNode !== undefined">
 	<div class = "nameLabel">
-		<span>Node Name: </span>{{_selectedNode.getName()}}
+		<span>Node: </span>
+		<div class ="content">
+			{{_selectedNode.getName()}}
+		</div>
 	</div>
-	
 	<ul>
-		<li  *ngFor="let output of _selectedNode.getOutputs()">
+		<li  class = "content" *ngFor="let output of _selectedNode.getOutputs()">
 			{{ output.getValue() }}
 		</li>
 	</ul>
-
-</div>
-
-<div>
-	Selected Port: 
-	<br>
-	{{ getPortContent() }}
+	<div class="outputPort" *ngIf="_selectedNode !== undefined">
+		<span>Selected Port:</span>
+		<br>
+		<div class ="content">
+			{{ getPortContent() }}
+		</div>
+	</div>
 </div>
 
 <div class="default" *ngIf="_selectedNode === undefined">
