--- a/src/styles.scss
+++ b/src/styles.scss
@@ -273,11 +273,31 @@ split-area{
 
 
 // dummy placeholder when node is being dragged in angular-tree
-.is-dragging-over{
-	height: 2px !important; 
-	border: 1px solid #9E9E9E !important; 
-	background-color: #9E9E9E !important;
+
+@keyframes procedure-drag{
+	from{
+		height: 7px;
+	}
+	to{
+		height: 28px !important; 
+	}
 }
+
+
+.node-drop-slot{
+	margin-top:-7px !important;
+	height: 7px;
+}
+
+.is-dragging-over{
+	animation-name: procedure-drag !important;
+	animation-duration: 0.25s !important;
+	height: 28px; 
+	border: 1px solid $color2 !important; 
+	background-color: $color2 !important;
+}
+
+
 
 tree-viewport{
 	overflow:hidden !important;
