--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
@@ -1,11 +1,11 @@
 @import '~scss/globals';
 
 span.module{
-	color: green;
+	color: $pcolor2;
 }
 
 span.function{
-	color: purple;
+	color: $pcolor4;
 }
 
 /*
