--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,13 @@ $color3: #E0E0E0; //#B9DCF5;
 $color4: #F0BFA0;
 $color5: #F07A79;
 
+//colors for modules/functions in procedure editor
+$pcolor1: #E94858; //pink-red
+$pcolor2: #F3A32A; //orange-yellow
+$pcolor3: #82BF6E; //lightgreen
+$pcolor4: #3CB4CB; //lightblue
+$pcolor5: #16434B; //darkgreenishblue
+
 $header-height: 30px;
 
 $toolbar-color: #F7F7F7;
