procedure and node disabling added

--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -145,6 +145,10 @@ split-area{
 					background-color: white;
 					cursor: move;
 
+					&.disabled{
+						background-color: gray;
+					}
+
 					&.selected{
 						border-width: 5px;
 					}
