--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -93,7 +93,12 @@
 									<div class="action-button" (click)="deleteNode(node_index)">
 										<mat-icon>delete</mat-icon>
 									</div>
-									<div class="action-button" (click)="saveNode(node_index)">
+									<div class="action-button" (click)="toggleNode(node)">
+										<mat-icon *ngIf='!node.isDisabled()'>check_circle</mat-icon>
+										<mat-icon *ngIf='node.isDisabled()'>highlight_off</mat-icon>
+									</div>
+									<div class="action-button" (click)="saveNode(node_index)" 
+										*ngIf="!isSaved(node)">
 										<mat-icon>file_download</mat-icon>
 									</div>
 								</div>
@@ -104,6 +109,7 @@
 							<div class="node-body" 
 								[class.library]="node.getType() !== undefined"
 								[class.error]="node._hasError"
+								[class.disabled] ="node.isDisabled()"
 								(click)="clickNode($event, node_index)"
 								draggable=true  
 								(dragstart)="nodeDragStart($event, node)" 
@@ -160,6 +166,11 @@
 
 									</div>
 								</div> 
+
+
+								<!-- <div class="fromLibrary"  style="font-size: 8px; text-align: center">
+									Library Node
+								</div> -->
 
 							</div>
 						
