--- a/src/app/ui-components/console/console.component.html
+++ b/src/app/ui-components/console/console.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<button (click)="clearConsole()">Clear Console</button>
 	<div class="message-container" *ngFor="let msg of _messages;">
 		<span class="message">{{msg.message}}</span>
 		<span class="time">{{msg.time}}</span>
