--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -19,7 +19,8 @@
 						  		<div class = "full-container">
 						  			<div class = "seg1" 
 						  				[class.error]="prod.data.hasError" 
-						  				[class.disabled]="prod.data.model.isDisabled()">
+						  				[class.disabled]="prod.data.model.isDisabled()"
+						  				[class.print]="prod.data.model.printToConsole()">
 										<!-- template for data -->
 										<div *ngIf="prod.data.name == 'Data'"> 
 											<div class='procedure-item'>
@@ -42,20 +43,20 @@
 
 										<div *ngIf="prod.data.name == 'IfElse'">
 											<div class='procedure-item'>
-												If-Else
+												if-else
 											</div>
 										</div>
 
 										<div *ngIf="prod.data.name == 'If'">
 											<div class='procedure-item'>
-											 If ( <input matInput class="tree-input"  [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+											 if ( <input matInput class="tree-input"  [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
 												(change)="updateProcedure($event, prod, 'left')"> )
 											</div>
 										</div>
 
 										<div *ngIf="prod.data.name == 'Else'">
 											<div class='procedure-item'>
-											 Else 
+											 else 
 											</div>
 										</div>
 
@@ -75,7 +76,7 @@
 												(change)="updateProcedure($event, prod, 'left')">
 												
 												= <span class="module">{{prod.data.module}}</span>
-														::
+													.
 												  <span class="function">{{prod.data.function}}</span> ( 
 
 												<div class="param-container" 
@@ -113,6 +114,9 @@
 			    					    </button>
 			    					    <button mat-button (click)="toggle(prod.data.model)">
 		    					    		<mat-icon>location_disabled</mat-icon>
+			    					    </button>
+			    					    <button mat-button (click)="togglePrint(prod.data.model)" *ngIf="prod.data.name =='Action' || prod.data.name =='Data'">
+		    					    		<mat-icon>flag</mat-icon>
 			    					    </button>
 			    					    <!-- <button (click)="disableProcedure(prod, $event)">Disable</button>
 			    					    <button (click)="go($event)">Copy</button> -->
