--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -41,7 +41,7 @@
             		(wheel)="scale($event)">
 
             	<div class="info-container" style="position: absolute; top: 30px; right: 30px">
-            		Zoom: {{zoom}}
+            		<!-- Zoom: {{zoom}} -->
             	</div>
 
                 <!-- svg canvas to draw the edges -->
